# repro_ts398

./: BUILD.bazel  WORKSPACE  googmodule_output_test.js  package.json  tsconfig.json
