load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")
load(":devmode_consumer.bzl", "devmode_consumer")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "googmodule",
    srcs = ["a.ts"],
    tsconfig = "tsconfig.json",
)

devmode_consumer(
    name = "devmode_output",
    deps = [":googmodule"],
)

jasmine_node_test(
    name = "googmodule_output_test",
    srcs = ["googmodule_output_test.js"],
    data = [
        ":devmode_output",
        "@npm//jasmine",
    ],
)
